# parse_ppt

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: convert.py
app/tools/: json_to_md.py
