[project]
name = "parseppt"
version = "0.1.0"
description = "FastAPI service to convert PPT/PPTX to Markdown using pptx2md"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name" }
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "python-multipart>=0.0.9",
  "pptx2md>=0.8.7",
]

[project.scripts]
parseppt = "app.main:app"
json-to-md = "app.tools.json_to_md:main"

[tool.uv]
dev-dependencies = []
package = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
